added template code changes